<resources>
    <string name="app_name">PartyPay</string>

    <!-- Strings used in activity_main-->
    <string name="search_hint">Search events &amp; members</string>
    <string name="event_name">Event Name </string>
    <string name="event_date">dd/mm/yyyy</string>

    <!-- Labels for dropdown in activity_main-->
    <string name="search_member">Member</string>
    <string name="search_event">Event</string>

    <!-- String for bottom navigation bar icons in activity_main -->
    <string name="main_bar_add">Add</string>
    <string name="main_bar_sort">Sort</string>
    <string name="main_bar_more">More</string>

    <!-- Labels for sort type in bottom navigation bar in activity_main -->
    <string name="main_sort_alphabet">Sort by alphabet</string>
    <string name="main_sort_time">Sort by time</string>
    <string name="main_setting">Setting</string>

    <!-- Labels for alert dialog in activity_main -->
    <string name="main_alert_message">Do you want to delete this event?</string>
    <string name="main_alert_positive">Delete</string>
    <string name="main_alert_negative">Cancel</string>

    <!-- Labels for alert dialog in activity_main -->
    <string name="member_alert_message1">Are you sure to remove this member : \"</string>
    <string name="member_alert_message2">\" \?</string>
    <string name="member_alert_positive">Remove</string>
    <string name="member_alert_negative">Cancel</string>

    <!-- String for add_create_event -->
    <string name="create_head">Create Event</string>
    <!-- Strings used for toast message -->
    <string name="toast_no_event_name">"Please enter event name"</string>
    <string name="toast_add_error">"Error creating new event. Please try again."</string>

    <!-- List name in activity_add_event spinner -->
    <string name="event_type_0">Meal</string>
    <string name="event_type_1">Trip</string>
    <string name="event_type_2">Group</string>
    <string name="event_type_3">Other</string>

    <!-- Common purse string in activity_add_event-->
    <string name="add_cmmn_purse">Add Common Purse</string>

    <!-- Current member string in activity_add_event-->
    <string name="crrt_member1">CURRENT MEMBER (</string>
    <string name="crrt_member2">)</string>

    <!-- Default user name in NewMemberActivity -->
    <string name="default_user_name">Me</string>
    <!-- String used in activity_event_summary -->
    <string name="total_spending">Total Spending:</string>
    <string name="debtors">Debtors</string>
    <string name="creditors">Creditors</string>
    <string name="money_currency">฿</string>
    <string name="new_member_hint">Member\'s name</string>
    <string name="new_member_button">Add Member</string>
    <!-- String used in activity_event tabs -->
    <string name="event_tab_1">Summary</string>
    <string name="event_tab_2">Overview</string>

    <!-- String for bottom navigation bar icons in activity_event -->
    <string name="event_bar_add">Add Transaction</string>
    <string name="event_bar_sort">Sort</string>
    <string name="event_bar_more">More</string>

    <!-- Label for editor menu option to save data and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Add Transaction activity-->
    <string name="transaction_payment">Payment</string>
    <string name="transaction_receive">Receive</string>
    <string name="transaction_transfer">Transfer</string>

    <string name="date_text">Date</string>
    <string name="done">DONE</string>
    <string name="expense_text">Expense</string>
    <string name="income_text">Income</string>
    <string name="purpose_text">Purpose</string>
    <string name="from_text">From</string>
    <string name="to_text">To</string>
    <string name="payer_text">Payer</string>
    <string name="involve_text">Involve</string>
    <string name="memo_text">Memo:</string>
    <string name="amount_text">Amount</string>
    <string name="memo_edittext">Add a comment</string>
    <string name="other_expense_edittext">Type your expense name</string>
    <string name="other_income_edittext">Type your income name</string>
    <string name="other_purpose_edittext">Type your transfer purpose</string>
    <string name="add_payer_text">Add Payer</string>
    <string name="add_receiver_text">Add Receiver</string>
    <string name="money_amount_text">Add amount of money</string>
    <!-- Add Transaction list -->
    <!-- Type options in activity_add_transaction spinner -->
    <string name="transaction_type_none">&gt;Select transaction type&lt;</string>
    <string name="transaction_type_0">Payment</string>
    <string name="transaction_type_1">Receive</string>
    <string name="transaction_type_2">Transfer</string>

    <!-- List name in activity_add_event spinner -->
    <string name="transaction_involve_none">&gt;Select members&lt;</string>
    <string name="transaction_involve_0">All members</string>
    <string name="transaction_involve_1">"All excepts..."</string>
    <string name="transaction_involve_2">Only...</string>

    <string name="choose_date_or_time">Choose Date or Time:</string>

</resources>
