<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/payer_child_view"
    android:layout_width="match_parent"
    android:layout_height="@dimen/payer_height"
    android:animateLayoutChanges="true"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/payerbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin">

        <TextView
            android:id="@+id/payer_text"
            android:layout_width="@dimen/margin_text_title"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/payer_text"
            android:textColor="@color/textOnS"
            android:textSize="@dimen/text_size_medium"/>
        <Spinner
            android:id="@+id/payer_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/payer_text"
            android:layout_toRightOf="@id/payer_text"
            android:minWidth="120dp"/>

        <ImageView
            android:id="@+id/payer_delete_image"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            app:srcCompat="@android:drawable/ic_delete" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/payer_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/payer_amount_text"
            android:layout_width="@dimen/margin_text_title"
            android:layout_height="wrap_content"
            android:text="@string/amount_text"
            android:textColor="@color/textOnS"
            android:textSize="@dimen/text_size_medium" />

        <EditText
            android:id="@+id/payer_amount_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:layout_weight="1"
            android:background="@drawable/edittext_background"
            android:hint="@string/money_amount_text"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:padding="@dimen/text_size_small"
            android:textColor="@drawable/edittext_text_color"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin"
        android:background="@android:color/darker_gray"/>
</LinearLayout>