<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_transaction"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSecondaryLight"
    android:orientation="vertical"
    tools:context="com.example.admin.partypay.TransactionFile.AddTransactionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Show Type of Transaction -->
        <LinearLayout
            android:id="@+id/transaction_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="@dimen/margin_text_title"
                android:layout_height="wrap_content"
                android:text="Type"
                android:textColor="@color/textOnS"
                android:textSize="@dimen/text_size_medium" />
            <TextView
                android:id="@+id/transaction_option_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="120dp"
                android:text="PAYMENT"
                android:textColor="@color/textOnS"
                android:textSize="@dimen/text_size_medium"/>

        </LinearLayout>

        <!-- Payment Layout -->
        <LinearLayout
            android:id="@+id/parent_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true"
            android:orientation="vertical"
            tools:visibility="visible"
            >
            <!-- Date options -->
            <LinearLayout
                android:id="@+id/date_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_margin"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_marginRight="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/date_text"
                    android:layout_width="@dimen/margin_text_title"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/date_text"
                    android:textColor="@color/textOnS"
                    android:textSize="@dimen/text_size_medium" />

                <TextView
                    android:id="@+id/date_selection"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/date_text"
                    android:textColor="@color/textOnS"
                    android:textSize="@dimen/text_size_medium" />

                <ImageView
                    android:id="@+id/date_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_edit_black_24dp"/>

                <!--<DatePicker-->
                    <!--android:id="@+id/date_picker_payment"-->
                    <!--android:layout_width="0dp"-->
                    <!--android:layout_height="135dp"-->
                    <!--android:layout_weight="1"-->
                    <!--android:calendarViewShown="false"-->
                    <!--android:datePickerMode="spinner" />-->

            </LinearLayout>
            <!-- Expense type -->
            <LinearLayout
                android:id="@+id/expense_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_margin"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_marginRight="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/expense_text"
                    android:layout_width="@dimen/margin_text_title"
                    android:layout_height="wrap_content"
                    android:text="@string/expense_text"
                    android:textColor="@color/textOnS"
                    android:textSize="@dimen/text_size_medium" />
                <EditText
                    android:id="@+id/expense_edittext"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/default_margin"
                    android:animateLayoutChanges="true"
                    android:background="@drawable/large_round_border"
                    android:hint="@string/other_expense_edittext"
                    android:imeOptions="actionDone"
                    android:inputType="textCapSentences|textNoSuggestions"
                    android:maxLines="1"
                    android:minWidth="120dp"
                    android:padding="@dimen/text_size_small"
                    android:textColor="@drawable/edittext_text_color"/>
                <ImageView
                    android:id="@+id/expense_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_edit_black_24dp"/>
            </LinearLayout>

            <!-- Line -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_marginRight="@dimen/default_margin"
                android:background="@android:color/darker_gray"/>
            <!--Payers -->
            <com.example.admin.partypay.ExpandableHeightGridView
                android:id="@+id/payment_gridview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:animateLayoutChanges="true"
                android:gravity="center"
                android:horizontalSpacing="10dp"
                android:isScrollContainer="false"
                android:numColumns="1"
                android:stretchMode="columnWidth"
                android:verticalSpacing="10dp"
                />
            <!-- Add payer option -->
            <Button
                android:id="@+id/add_payer_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_marginLeft="@dimen/other_margin"
                android:layout_marginRight="@dimen/default_margin"
                android:layout_marginStart="@dimen/other_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:animateLayoutChanges="true"
                android:text="@string/add_payer_text"/>
            <!-- Member 'From' involved -->
            <LinearLayout
                android:id="@+id/from_transfer_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:animateLayoutChanges="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/from_transfer_text"
                    android:layout_width="@dimen/margin_text_title"
                    android:layout_height="wrap_content"
                    android:text="@string/from_text"
                    android:textColor="@color/textOnS"
                    android:textSize="@dimen/text_size_medium" />
                <Spinner
                    android:id="@+id/from_transfer_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="120dp"/>
            </LinearLayout>
            <!-- Member 'To' involved -->
            <LinearLayout
                android:id="@+id/to_transfer_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:animateLayoutChanges="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/to_transfer_text"
                    android:layout_width="@dimen/margin_text_title"
                    android:layout_height="wrap_content"
                    android:text="@string/to_text"
                    android:textColor="@color/textOnS"
                    android:textSize="@dimen/text_size_medium" />
                <Spinner
                    android:id="@+id/to_transfer_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="120dp"/>
            </LinearLayout>
            <!-- Line -->
            <LinearLayout
                android:id="@+id/payer_line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_marginRight="@dimen/default_margin"
                android:background="@android:color/darker_gray"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="horizontal"
                />
            <!-- Member involved -->
            <LinearLayout
                android:id="@+id/involve_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:animateLayoutChanges="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/involve_text"
                    android:layout_width="@dimen/margin_text_title"
                    android:layout_height="wrap_content"
                    android:text="@string/involve_text"
                    android:textColor="@color/textOnS"
                    android:textSize="@dimen/text_size_medium" />
                <Spinner
                    android:id="@+id/involve_spinner_payment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="120dp"/>
            </LinearLayout>
            <!-- List of member involved -->
            <com.example.admin.partypay.ExpandableHeightGridView
                android:id="@+id/involve_gridview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:animateLayoutChanges="true"
                android:columnWidth="100dp"
                android:descendantFocusability="afterDescendants"
                android:gravity="center"
                android:horizontalSpacing="10dp"
                android:isScrollContainer="false"
                android:numColumns="auto_fit"
                android:stretchMode="columnWidth"
                android:verticalSpacing="10dp" />
            <!-- Amount of transfer -->
            <LinearLayout
                android:id="@+id/transfer_amount_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_margin"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_marginRight="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/transfer_amount_text"
                    android:layout_width="@dimen/margin_text_title"
                    android:layout_height="wrap_content"
                    android:text="@string/amount_text"
                    android:textColor="@color/textOnS"
                    android:textSize="@dimen/text_size_medium" />

                <EditText
                    android:id="@+id/transfer_amount_edittext"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="@dimen/default_margin"
                    android:background="@drawable/large_round_border"
                    android:hint="@string/money_amount_text"
                    android:imeOptions="actionDone"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:padding="@dimen/text_size_small"/>
                <ImageView
                    android:id="@+id/amount_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_edit_black_24dp"/>
            </LinearLayout>
            <!-- Memo-->
            <LinearLayout
                android:id="@+id/memo_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:animateLayoutChanges="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/memo_text"
                    android:layout_width="@dimen/margin_text_title"
                    android:layout_height="wrap_content"
                    android:text="@string/memo_text"
                    android:textColor="@color/textOnS"
                    android:textSize="@dimen/text_size_medium" />
                <EditText
                    android:id="@+id/memo_edittext"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/default_margin"
                    android:hint="@string/memo_edittext"
                    android:inputType="textMultiLine"
                    android:maxLines="5"
                    android:background="@drawable/edittext_background"
                    android:textColor="@drawable/edittext_text_color" />
                <ImageView
                    android:id="@+id/memo_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_edit_black_24dp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>