<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    
        <!-- Total balance text -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible">

            <TextView
                android:id="@+id/total_balance_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/half_default_margin"
                android:layout_marginLeft="28dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/total_spending"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/total_balance_currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/double_default_margin"
                android:layout_centerVertical="true"
                android:text="@string/money_currency"
                android:textColor="@android:color/holo_red_light"
                android:textSize="@dimen/text_size_extra_large"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/total_balance_money"
                android:layout_width="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/total_balance_currency"
                android:layout_centerVertical="true"
                android:textColor="@android:color/holo_red_light"
                android:textSize="@dimen/text_size_extra_large"
                android:textStyle="bold"
                tools:text="-1000.00 "/>


        </RelativeLayout>

        <!-- Detailed debtor listView -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:layout_marginTop="@dimen/half_default_margin"
            android:layout_weight="1"
            android:background="@drawable/default_border_debt_body"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/default_border_debt_head"
                android:paddingBottom="@dimen/quarter_default_margin"
                android:paddingLeft="@dimen/default_margin"
                android:paddingRight="@dimen/default_margin"
                android:paddingTop="@dimen/quarter_default_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/debtors"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_size_medium"
                    android:textStyle="bold"/>

                <!--<TextView-->
                    <!--android:id="@+id/debt_total_currency"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_alignParentEnd="true"-->
                    <!--android:layout_alignParentRight="true"-->
                    <!--android:layout_centerVertical="true"-->
                    <!--android:text="@string/money_currency"-->
                    <!--android:visibility="invisible"-->
                    <!--android:textColor="@android:color/holo_red_light"-->
                    <!--android:textSize="@dimen/text_size_medium"-->
                    <!--android:textStyle="bold"/>-->

                <!--<TextView-->
                    <!--android:id="@+id/debt_total_money"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_centerVertical="true"-->
                    <!--android:layout_toLeftOf="@id/debt_total_currency"-->
                    <!--android:layout_toStartOf="@id/debt_total_currency"-->
                    <!--android:textColor="@android:color/holo_red_light"-->
                    <!--android:visibility="invisible"-->
                    <!--android:textSize="@dimen/text_size_large"-->
                    <!--android:textStyle="bold"-->
                    <!--tools:text="-1000.00 "/>-->
            </RelativeLayout>

            <ListView
                android:id="@+id/debt_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="@dimen/default_margin"
                android:paddingRight="@dimen/default_margin">
            </ListView>
        </LinearLayout>

        <!-- Detailed creditor listView -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginBottom="@dimen/default_margin"
            android:layout_weight="1"
            android:background="@drawable/default_border_debt_body"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/default_border_debt_head"
                android:paddingBottom="@dimen/quarter_default_margin"
                android:paddingLeft="@dimen/default_margin"
                android:paddingRight="@dimen/default_margin"
                android:paddingTop="@dimen/quarter_default_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/creditors"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_size_medium"
                    android:textStyle="bold"/>

                <!--<TextView-->
                    <!--android:id="@+id/credit_total_currency"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_alignParentRight="true"-->
                    <!--android:layout_centerVertical="true"-->
                    <!--android:text="@string/money_currency"-->
                    <!--android:visibility="invisible"-->
                    <!--android:textColor="@android:color/holo_green_light"-->
                    <!--android:textSize="@dimen/text_size_medium"-->
                    <!--android:textStyle="bold"/>-->

                <!--<TextView-->
                    <!--android:id="@+id/credit_total_money"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_centerVertical="true"-->
                    <!--android:visibility="invisible"-->
                    <!--android:layout_toLeftOf="@id/credit_total_currency"-->
                    <!--android:textColor="@android:color/holo_green_light"-->
                    <!--android:textSize="@dimen/text_size_large"-->
                    <!--android:textStyle="bold"-->
                    <!--tools:text="1000.00 "/>-->
            </RelativeLayout>

            <ListView
                android:id="@+id/credit_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="@dimen/default_margin"
                android:paddingRight="@dimen/default_margin">
            </ListView>
        </LinearLayout>

</LinearLayout>